src/BadScript.Tests/tests/passing/types/function/properties/maxArgs.bs
function f(x, y)
{

}

return f.MaxArgs == 2