src/BadScript.Tests/tests/failing/invalid-operations/invalid_argc_01.bs
function f(x, y)
{
	
}

f(1)